--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrUsE3jC7ybjtQmXnlrnSf",
+      "authorship_tag": "ABX9TyME96fw+Q4DDLW9wkzrSkPT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,19 +34,40 @@
       },
       "outputs": [],
       "source": [
-        "# Example 01\n",
-        "name = input(\"Ingrese su primer nombre \")                    # Los valores en input se leen como str\n",
-        "name2 = input(\"Ingrese su segundo nombre \")\n",
-        "surname1 = input(\"Ingrese su primer apellido \")\n",
-        "surname2 = input(\"Ingrese su segundo apellido \")\n",
-        "print(f\"Hola, {name} {name2} {surname1} {surname2}\")\n",
+        "#Variables\n",
+        "string_variable=\"This is a string\"\n",
+        "print(string_variable)\n",
+        "int_variable=7\n",
+        "print(int_variable)\n",
+        "bool_variable=False\n",
+        "print(bool_variable)\n",
+        "float_variable = 2.5\n",
+        "print(float_variable)\n",
         "\n",
-        "name = int(input(\"Ingrese su primer numero \"))               # Por lo tanto, para tomar valores numericos convertimos str a int/float\n",
-        "name2 = int(input(\"Ingrese su segundo numero \"))\n",
-        "c = name + name2\n",
-        "print(c)\n",
         "\n",
-        "# Aprender \"Objetos\" / recomendado\n"
+        "#Variables on a single line\n",
+        "name, surname, alias = \"Pepito\", \"Perez\", \"Pepo\"\n",
+        "print(name, surname, \"/\",alias)\n",
+        "\n",
+        "#Add variables to print\n",
+        "print(string_variable,int_variable,bool_variable)\n",
+        "print(type(int_variable))\n",
+        "\n",
+        "#Method GOD for text + variable\n",
+        "print(f\"Hola, {string_variable}\")\n",
+        "\n",
+        "#Conver type int to str\n",
+        "int_to_str=str(int_variable)\n",
+        "print(int_to_str)\n",
+        "print(type(int_to_str))\n",
+        "\n",
+        "#System functions\n",
+        "print(len(string_variable))     #sentence counter\n",
+        "\n",
+        "#Inputs\n",
+        "#Son las entradas de usuario por consola. El codigo no continua hasta la respuesta del input\n",
+        "name = input(\"¿What is your name? \")\n",
+        "print(\"Hola,\",name)\n"
       ]
     }
   ]
